# sidegame-py

./: .gitignore  README.md  requirements-rl.txt  requirements.txt  run_actor.py  run_client.py  run_extraction.py  run_matchmaking.py  run_recorder.py  run_replay.py  run_server.py  run_supervised.py  setup.py  test_accuracy.py  test_locks.py
dev_notebooks/: 01-frame-rendering.ipynb  02-positional-audio.ipynb  03-formulae.ipynb  04-wall-deflection.ipynb  05-spectral-analysis.ipynb  06-demo-analysis.ipynb
notebooks/: 03-formulae.ipynb  06-demo-analysis.ipynb
sdgai/: actor.py  layers.py  model.py  reinforcement.py  rl.py  run_actor.py  run_reinforcement.py  run_supervised.py  utils.py
sidegame/: audio.py  effects.py  graphics.py  physics.py  utils.py  utils_jit.py
sidegame/assets/: __init__.py  hrir2d.npy
sidegame/assets/sheets/: slices.json
sidegame/ext/: Cargo.toml  lib.rs  sdglib.py  sdglib37.pyd  sdglib39.pyd
sidegame/game/: __init__.py  matchmaking.py  server.py
sidegame/game/client/: __init__.py  base.py  extraction.py  interface.py  replay.py  simulation.py  tracking.py
sidegame/game/shared/: __init__.py  core.py  inventory.py  objects.py  player.py  session.py
sidegame/networking/: __init__.py  client.py  core.py  matchmaking.py  server.py
user_data/: config.json  config_ip.json  dem0_demo-30.0_001.sdg  dem0_demo-30.0_002.sdg  dem0_demo-60.0_000.sdg
