[package]
name = "sdglib"
version = "0.1.0"
authors = ["jernejp"]
edition = "2018"

[lib]
name = "sdglib"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.13"
ndarray = "0.14"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
